sharedPreffences+ custom Dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShaqedApplication">
         <activity
-            android:name=".DynamicActivity"
-            android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:name=".costumDialogActivity"
+            android:exported="true" >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+        </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".SharedProgressionActivity"
             android:exported="false">
         </activity>
+        <activity
+            android:name=".DynamicActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
