--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShaqedApplication">
         <activity
-            android:name=".costumDialogActivity"
+            android:name=".AlertActivity"
             android:exported="true" >
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
-            android:name=".SharedProgressionActivity"
+            android:name=".costumDialogActivity"
             android:exported="false">
         </activity>
         <activity
-            android:name=".DynamicActivity"
+            android:name=".SharedProgressionActivity"
             android:exported="false"></activity>
+        <activity
+            android:name=".DynamicActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
